@@ -38,6 +38,9 @@ Id3Parser::Id3Parser(QObject *parent)
 void Id3Parser::parse(QByteArray &data)
 {
   int offset=0;
+  bool first_tag_processed=false;
+  int original_size=data.size();
+  int bytes_removed=0;
 
   //
   // Find ID3 Tags
@@ -58,16 +61,22 @@ void Id3Parser::parse(QByteArray &data)
       if((0x08&data[offset+5])!=0) {  // Check for Footer
 	tag_size+=10;
       }
+      if(first_tag_processed) {
+	tag_size+=3;
+      }
+      first_tag_processed=true;
+
       Id3Tag *tag=new Id3Tag(data.mid(offset,tag_size));
       emit tagReceived(parser_bytes_processed+offset,tag);
       delete tag;
+
       data.remove(offset,tag_size);
+      bytes_removed+=tag_size;
     }
     else {
       offset+=3;
     }
   }
-
   parser_bytes_processed+=data.size();
 }
 
